--- a/themes/dragon/css/dragon.css
+++ b/themes/dragon/css/dragon.css
@@ -71,9 +71,13 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 }
 
 body {
-  font-family: "mgOpenModerna";
+  font-family: mgOpenModerna, "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 15px;
   line-height: 130%;
+}
+body h1, body h2, body h3, body h4, body h5 {
+  font-family: PTSansRegular, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  letter-spacing: 0.001em;
 }
 
 html {
@@ -102,10 +106,85 @@ html {
 }
 .zone-content .region-content-inner {
   border-left: 1px solid #bbbbbb;
-  padding-left: 16px;
+  padding: 16px;
+}
+.zone-content .region-content #page-title {
+  font-size: 200%;
+  margin-top: 0;
+  margin-bottom: 8px;
+}
+.zone-content .region-content h1 {
+  color: #0062a0;
+  font-size: 160%;
+  margin: 16px 0 4px 0;
+}
+.zone-content .region-content h2 {
+  color: #0062a0;
+  margin: 16px 0 0 0;
+  font-size: 120%;
+}
+.zone-content .region-content h2.block-title {
+  font-size: 140%;
+  margin: 0;
+}
+.zone-content .region-content h2.block-title a:link, .zone-content .region-content h2.block-title a:visited, .zone-content .region-content h2.block-title a:hover, .zone-content .region-content h2.block-title a:active {
+  text-decoration: none;
+}
+.zone-content .region-content p {
+  margin-bottom: 12px;
+}
+.zone-content .region-content .timestamp, .zone-content .region-content .tags {
+  font-size: 80%;
+  font-style: italic;
+}
+.zone-content .region-content .tags {
+  margin-bottom: 24px;
 }
 .zone-content .region-content .geshifilter {
   font-size: 12px;
+  margin-bottom: 12px;
+}
+.zone-content .region-content ul {
+  list-style: disc;
+}
+.zone-content .region-content .field-label {
+  font-weight: normal;
+  float: left;
+}
+.zone-content .region-content .field-name-field-references {
+  clear: both;
+  float: left;
+  margin-bottom: 4px;
+  width: 100%;
+}
+.zone-content .region-content .field-name-field-references .field-item {
+  float: left;
+  margin-right: 0.5em;
+}
+.zone-content .region-content .field-type-taxonomy-term-reference .field-item {
+  margin-right: 0.5em;
+}
+.zone-content table {
+  border-collapse: collapse;
+  width: 100%;
+}
+.zone-content table th {
+  background-color: rgba(0, 0, 0, 0.5);
+  zoom: 1;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#80000000,endColorstr=#80000000);
+  padding-right: 1em;
+  text-align: left;
+  color: #FFF;
+}
+.zone-content table tbody tr {
+  background-color: #eeeeee;
+}
+.zone-content table td, .zone-content table th {
+  padding: 0.2em 0.5em;
+  border: 1px solid #bbbbbb;
+}
+.zone-content .node-links {
+  margin: 16px 0;
 }
 
 .section-footer .zone-footer {
