--- a/themes/dragon/css/dragon.css
+++ b/themes/dragon/css/dragon.css
@@ -92,6 +92,7 @@ html {
   -moz-box-shadow: 0px 8px 0px black;
   box-shadow: 0px 8px 0px black;
   margin-bottom: 8px;
+  height: 90px;
 }
 
 .block-menu ul {
