--- a/themes/sepia/sass/_sepia.variables.scss
+++ b/themes/sepia/sass/_sepia.variables.scss
@@ -26,9 +26,9 @@ $brown_light:           #9C4A02 !default;
 // Theme color definitions
 // -----------------------------------------------------------------------------
 //
-$theme-primary-color:             #F7DEC6;
+$theme-primary-color:             #FBF0DA;
 $theme-secondary-color:           #EDB884;
-$theme-teritary-color:            #E18634;
+$theme-teritary-color:            #D67F33;
 
 
 // -----------------------------------------------------------------------------
@@ -42,7 +42,7 @@ $theme-icon-library-font:         FontAwesome;
 // Typography
 // -----------------------------------------------------------------------------
 //
-$font-color-primary:              transparentize($black, .2);
+$font-color-primary:              #584d3b;
 
 
 // -----------------------------------------------------------------------------
