--- a/themes/sepia/sass/_sepia.variables.scss
+++ b/themes/sepia/sass/_sepia.variables.scss
@@ -9,6 +9,7 @@
 //
 $white:                 #fff    !default;
 $black:                 #000    !default;
+$grey:                  #BBB    !default;
 $brown:                 #380300 !default;
 $brown_light:           #9C4A02 !default;
 
