--- a/themes/sepia/sass/sepia.style.scss
+++ b/themes/sepia/sass/sepia.style.scss
@@ -24,6 +24,11 @@
 @import "_sepia.mediaqueries.scss";
 
 // **
+// Zengrids
+// **
+@import "_sepia.grids.scss";
+
+// **
 // Navigation menu
 // **
 @import "_sepia.nav.scss";
